# covtool

./: .gitignore  CLAUDE.md  README.md  covtool.py  pyproject.toml
.claude/: settings.local.json
covtool/: __init__.py  analysis.py  cli.py  core.py  drcov.py  inspector.py  lift.py
covtool/inspector/: __init__.py  dialogs.py  inspector.py  views.py
doc/: drcov_spec_hits_v2.md
tests/: __init__.py  test_analysis.py  test_cli.py  test_core.py  test_drcov_library.py  test_hitcount_extension.py  test_integration.py
