[project]
name = "covtool"
version = "0.4.4"
description = "a multitool for manipulating coverage traces for dynamic analysis"
authors = [
    {name = "redthing1",email = "redthing1@alt.icu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer (>=0.15.4,<0.16.0)",
    "minlog (>=0.6.0,<0.7.0)",
    "rich (>=13.0.0,<14.0.0)",
    "urwid (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
covtool = "covtool.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

